Hemlchart/710-ingress-working-check/ingress-res.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocdtesting
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nitinpahwa.argocd.com  #register dns name at https://my.noip.com for free
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
